--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,5 +12,21 @@
     {% elsif site.duoshuo_shortname and site.duoshuo_share %}
       {% include _partials/share/duoshuo_share.html %}
     {% endif %}
+    <div id="container"></div>
   </div>
 </div>
+
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+  <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+  <script>
+  var gitment = new Gitment({
+  id: '页面 ID', // 可选。默认为 location.href  比如我本人的就删除了
+  owner: '你的 GitHub Name',              //比如我的叫anTtutu
+  repo: '存储评论的 repo',                 //比如我的叫anTtutu.github.io
+  oauth: {
+    client_id: '你的 client ID',          //比如我的828***********
+    client_secret: '你的 client secret',  //比如我的49e************************
+    },
+  })
+  gitment.render('container')
+</script>
