--- a/_includes/post.html
+++ b/_includes/post.html
@@ -20,12 +20,12 @@
   <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
   <script>
   var gitment = new Gitment({
-  id: '页面 ID', // 可选。默认为 location.href  比如我本人的就删除了
-  owner: '你的 GitHub Name',              //比如我的叫anTtutu
-  repo: '存储评论的 repo',                 //比如我的叫anTtutu.github.io
+  id: '', // 可选。默认为 location.href  比如我本人的就删除了
+  owner: 'XiaorAx',              //比如我的叫anTtutu
+  repo: '',                 //比如我的叫anTtutu.github.io
   oauth: {
-    client_id: '你的 client ID',          //比如我的828***********
-    client_secret: '你的 client secret',  //比如我的49e************************
+    client_id: '0c586dfbc4fa5d6816eb',          //比如我的828***********
+    client_secret: '26dd28c1fa25e6eed7947da6b52ccf5fe784eaa7',  //比如我的49e************************
     },
   })
   gitment.render('container')
