--- a/_includes/post.html
+++ b/_includes/post.html
@@ -22,7 +22,7 @@
   var gitment = new Gitment({
   id: '', // 可选。默认为 location.href  比如我本人的就删除了
   owner: 'XiaorAx',              //比如我的叫anTtutu
-  repo: '',                 //比如我的叫anTtutu.github.io
+  repo: 'cflelf.github.io',                 //比如我的叫anTtutu.github.io
   oauth: {
     client_id: '0c586dfbc4fa5d6816eb',          //比如我的828***********
     client_secret: '26dd28c1fa25e6eed7947da6b52ccf5fe784eaa7',  //比如我的49e************************
