--- a/_includes/post.html
+++ b/_includes/post.html
@@ -15,3 +15,19 @@
     <div id="container"></div>
   </div>
 </div>
+
+<div id="container"></div>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<script>
+var gitment = new Gitment({
+  id: location.href, // 可选。默认为 location.href  比如我本人的就删除了
+  owner: 'Cflelf',              //比如我的叫anTtutu
+  repo: 'cflelf.github.io',                 //比如我的叫anTtutu.github.io
+  oauth: {
+    client_id: '0c586dfbc4fa5d6816eb',          //比如我的828***********
+    client_secret: '26dd28c1fa25e6eed7947da6b52ccf5fe784eaa7',  //比如我的49e************************
+  },
+})
+gitment.render('container')
+</script>
