--- a/_includes/post.html
+++ b/_includes/post.html
@@ -21,7 +21,7 @@
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: location.href, // 可选。默认为 location.href  比如我本人的就删除了
+  id: window.location.pathname, // 可选。默认为 location.href  比如我本人的就删除了
   owner: 'Cflelf',              //比如我的叫anTtutu
   repo: 'Cflelf.github.io',                 //比如我的叫anTtutu.github.io
   oauth: {
